<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/versao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:visibility="visible">


    <TextView
        android:id="@+id/textView01"
        android:layout_marginTop="@dimen/vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_namelong"
        android:textColor="@color/branco"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/versao"
        android:textColor="@color/branco"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView03"
        android:layout_marginTop="@dimen/vertical_linha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/desenvolvido"
        android:textColor="@color/branco"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView04"
        android:layout_marginTop="@dimen/vertical_linha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/orientador"
        android:textColor="@color/branco"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView05"
        android:layout_marginTop="@dimen/vertical_linha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/aprovado"
        android:textColor="@color/branco"
        android:textAppearance="?android:attr/textAppearanceMedium" />
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="300dp">

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/botaoazul"
        android:textColor="@color/branco"
        android:text="Voltar" />

</RelativeLayout>


</LinearLayout>